[Bandcamp] Migrate stream extractors to new Stream API